# rsconstruct

./: .gitignore  .spellcheck-words  .tools.versions  CLAUDE.md  CODING_STANDARDS.md  Cargo.toml  Makefile  README.md  SUGGESTIONS.md  build.rs  build_dev.sh  build_release.sh  design.md  feature-deps.txt  features.txt  myapp.conf  problem.txt  problems.txt  release.toml  rsb.toml  test.sh
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: docs.yml  release.yml
config/: settings.py
doc/: batch-parallelism.md  checksum-perf.md  kernel-config-system.md  python-dep-analysis-extensions.md  strictness-pass.md  structured-errors.md  tera-graph-access.md  variants.md
docs/: book.toml
docs/src/: SUMMARY.md  advanced.md  analyzers.md  architecture.md  binary-releases.md  cache.md  checksum-cache.md  coding-standards.md  commands.md  completions.md  configuration.md  cross-processor-dependencies.md  dependency-caching.md  design.md  environment-variables.md  getting-started.md  github-actions.md  installation.md  internal-processors.md  introduction.md  missing-processors.md  nomenclature.md  output-prediction.md  per-processor-max-jobs.md  plugins.md  processor-contract.md  processor-ordering.md  processor-types.md  processor-versioning.md  processors.md  project-structure.md  rejected-problems.md  release-info.md  remote-caching.md  shared-output-directory.md  suggestions-done.md  suggestions.md  testing.md  todo.md  unreferenced-files.md
src/: build_context.rs  builder.rs  checksum.rs  cli.rs  color.rs  config.rs  db.rs  deps_cache.rs  errors.rs  executor.rs  exit_code.rs  file_index.rs  graph.rs  ignore.rs  json_output.rs  main.rs  object_store.rs  phases.rs  platform.rs  processor.rs  progress.rs  registry.rs  remote_cache.rs  runtime_flags.rs  tables.rs  template.rs  tool_lock.rs  watcher.rs  webcache.rs  word_manager.rs
src/analyzers/: cpp.rs  icpp.rs  markdown.rs  mod.rs  python.rs  tera.rs
src/builder/: add_config.rs  analyzers.rs  build.rs  clean.rs  config_cmd.rs  deps.rs  doctor.rs  fix.rs  graph.rs  mod.rs  processors.rs  product.rs  sloc.rs  smart.rs  symlink_install.rs  tools.rs
src/config/: analyzer_configs.rs  mod.rs  processor_configs.rs  provenance.rs  tests.rs  variables.rs
src/executor/: execution.rs  handlers.rs  mod.rs  policy.rs
src/object_store/: blobs.rs  checksums.rs  config_diff.rs  descriptors.rs  management.rs  mod.rs  operations.rs  restore.rs  validity.rs
src/processors/: base.rs  cc.rs  cpplint.rs  creator.rs  linter.rs  lua_processor.rs  make.rs  mod.rs  pylint.rs  ruff.rs  shellcheck.rs  sleep.rs  spellcheck.rs  template.rs
src/registries/: analyzer.rs  mod.rs  processor.rs
templates/: Makefile.tera  myapp.conf.tera
tests/: build.rs  cache.rs  complete.rs  config.rs  dry_run.rs  graph.rs  init.rs  integration_test.rs  main.rs  processor_cmd.rs  processors.rs  rsbignore.rs  status.rs  tools.rs  watch.rs
tests/common/: mod.rs
tests/processors/: a2x.rs  ascii_check.rs  aspell.rs  black.rs  black_check.rs  cargo.rs  cc.rs  cc_single_file.rs  checkstyle.rs  clang_tidy.rs  clippy.rs  cppcheck.rs  creator.rs  doctest.rs  drawio.rs  eslint.rs  gem.rs  jinja2.rs  jq.rs  json_schema.rs  jsonlint.rs  libreoffice.rs  luacheck.rs  make.rs  mako.rs  markdown.rs  markdownlint.rs  marp.rs  mdbook.rs  mdl.rs  mermaid.rs  mypy.rs  npm.rs  pandoc.rs  pdflatex.rs  pdfunite.rs  pip.rs  protobuf.rs  pylint.rs  pyrefly.rs  (+20 more)
tests/tests_mod/: analyzers.rs  build.rs  cache.rs  complete.rs  (+15 more)
(+232 files in other folders)
