[package]
name = "rsb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
tera = "1.20"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
notify = "7"
ignore = "0.4"
ctrlc = "3.4"
humansize = "2"
zspell = "0.5"
which = "7"
parking_lot = "0.12.5"
chrono = "0.4.43"

[dev-dependencies]
tempfile = "3.8"
serde_json = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
