[package]
name = "rsconstruct"
version = "0.3.7"
edition = "2024"
authors = ["Mark Veltzer <mark.veltzer@gmail.com>"]
description = "Rust based fast build system"
license = "MIT"
repository = "https://github.com/veltzer/rsconstruct"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
tera = "1.20"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1"
toml_edit = "0.25"
anyhow = "1.0"
dirs = "6"
notify = "8"
ignore = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "process", "signal", "sync", "macros", "io-util"] }
humansize = "2"
zspell = "0.5"
which = "8"
parking_lot = "0.12.5"
chrono = "0.4.43"
redb = "3"
indicatif = "0.18"
mlua = { version = "0.11", features = ["lua54", "send", "vendored", "serialize"] }
regex = "1"
glob = "0.3.3"
serde_yml = "0.0.12"
zstd = "0.13"
paste = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
serde_json = "1.0"
paste = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
